# prj14a

./: .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: django.yml
docker/: Dockerfile
docs/: .pages  Partecipa.md  varie.md
src/: manage.py
src/albdif/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/albdif/config/: __init__.py  settings.py  urls.py
src/albdif/fixtures/: albdif_fix
src/albdif/management/commands/: crea_dati_test.py  inizializza.py
src/albdif/migrations/: 0001_initial.py  0002_alter_calendarioprenotazione_options_and_more.py  0002_alter_prezzocamera_options_and_more.py  0002_prenotazione_costo_soggiorno_and_more.py  0003_prenotazione_data_stato_visitatore_partita_iva_and_more.py  0003_proprieta_principale.py  0004_alter_foto_options_camera_nome_camera_services_and_more.py  0004_richiestaadesione.py  0009_host_codice_fiscale_host_contratto_host_partita_iva_and_more.py  0010_remove_prenotazione_version_proprieta_nome_and_more.py  0011_host_richiesta_associazione_alter_stagione_stagione.py
src/albdif/templates/: base.html
src/albdif/templates/albdif/: calendario_camera.html  calendario_camera_incluso.html  calendario_prenotazioni_list.html  camera_detail.html  camere_list.html  contatti.html  form_prenotazione.html  form_registrazione.html  (+11 more)
src/albdif/utils/: fixtures.py  pipeline.py  utility.py
src/siteprj/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
src/static/css/: albdif.css
src/static/js/: calcola_prezzo_prenotazione.js
tests/: .coveragerc  conftest.py  test_commands.py  test_forms.py  test_models.py  test_pipeline.py  test_views.py  test_views_new.py
(+4 files in other folders)
