[project]
name = "pw14a"
version = "0.1.0"
description = "Prenotazioni Online AD"
authors = [
    {name = "fabmeo", email = "fab.meo.fm@gmail.com"},
]
dependencies = ["django>=5.1.3", "pytest>=8.3.4", "pytest-django>=4.9.0", "django-environ>=0.11.2", "coverage>=7.6.9", "pytest-coverage>=0.0"]
requires-python = ">=3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "siteprj.settings"