[project]
name = "pw14a"
version = "0.1.0"
description = "Prenotazioni Online AD"
authors = [
    {name = "fabmeo", email = "fab.meo.fm@gmail.com"},
]
dependencies = [
    "django>=4.2.17",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
    "django-environ>=0.11.2",
    "coverage>=7.6.9",
    "pytest-coverage>=0.0",
    "django-webtest>=1.9.12",
    "factory-boy>=3.3.1"
]
requires-python = ">=3.9,<=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "albdif.config.settings"